[package]
name = "totaluptime"
version = "1.0.0"
edition = "2021"
authors = ["Ilingu"]
description = "It computes the total uptime of your PC"
readme = "README.md"
repository = "https://github.com/Ilingu/total_uptime"
homepage = "https://github.com/Ilingu/total_uptime"
license = "MIT"
keywords = ["uptime", "device info"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
